--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,42 @@
-<h1>Patients#show</h1>
-<p>Find me in app/views/patients/show.html.erb</p>
+<%= link_to "All Patients", root_path %>
+
+<h1>Patient Details</h1>
+
+<ul>
+  <li>First Name: <%= @patient.first_name %></li>
+  <li>Middle Name: <%= @patient.middle_name %></li>
+  <li>Last Name: <%= @patient.last_name %></li>
+  <li>Weight: <%= @patient.weight %></li>
+  <li>Height: <%= @patient.height %></li>
+  <li>MRN: <%= @patient.mrn %></li>
+</ul>
+
+<h2>Encounters</h2>
+
+<%= link_to "Add Encounter", new_patient_encounter_path(@patient, @encounter) %>
+
+<table>
+  <tr>
+    <th>ID</th>
+    <th>Visit Number</th>
+    <th>Admitted At</th>
+    <th>Discharged At</th>
+    <th>Actions</th>
+  </tr>
+
+  <% @patient.encounters.each do |encounter| %>
+    <tr>
+      <td><%= encounter.id %></td>
+      <td><%= encounter.visit_number %></td>
+      <td><%= encounter.admitted_at %></td>
+      <td><%= encounter.discharged_at %></td>
+      <td>
+        <%= link_to "Show", patient_encounter_path(@patient, encounter) %>
+        <%= link_to "Edit", edit_patient_encounter_path(@patient, encounter) %>
+        <%= link_to "Delete", patient_encounter_path(@patient, encounter), data: {confirm: "Are you sure you want to delete this encounter?"}, method: :delete  %>
+      </td>
+    </tr>
+  <% end %>
+
+
+</table>
