--- a/app/assets/stylesheets/patients.scss
+++ b/app/assets/stylesheets/patients.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Patients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  text-align: center;
+}
+
+table {
+  border: 1px solid #DDD;
+  width: 800px;
+  margin: auto;
+
+  td {
+    padding: 5px;
+  }
+}
