--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,1 +1,25 @@
 <h1>All Patients</h1>
+
+<%= link_to "Add Patient", new_patient_path %>
+
+<table>
+  <tr>
+    <th>MRN</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Actions</th>
+  </tr>
+
+  <% @patients.each do |patient| %>
+    <tr>
+      <td><%= patient.mrn %></td>
+      <td><%= patient.first_name %></td>
+      <td><%= patient.last_name %></td>
+      <td>
+        <%= link_to "Show", patient %>
+        <%= link_to "Edit", edit_patient_path(patient) %>
+        <%= link_to "Delete", patient, data: {confirm: "Are you sure you want to delete this patient?"}, method: :delete %>
+      </td>
+    </tr>
+  <% end %>
+</table>
