Adding more tests for views

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Patients</h1>
 
-<p><%= flash[:notice] %></p>
+<p class="notice-message"><%= flash[:notice] %></p>
 
 <%= link_to "Add Patient", new_patient_path %>
 
