--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Patient Details</h1>
 
-<%= flash[:notice] %>
+<p class="notice-message"><%= flash[:notice] %></p>
 
 <ul>
   <li>First Name: <%= @patient.first_name %></li>
